# nix-dots

./: .gitignore  .gitmodules  .neoconf.json  .nixd.json  .pre-commit-config.yaml  .secrets.enc.yml  .sops.yaml  LICENSE  Notes.org  README.md  Session.vim  Todo.org  cli.nix  colors.nix  flake.bak  flake.lock.bak  flake.nix  home.nix  isotty  justfile  niri-colors.generated.kdl  nixgl.nix  nixpkgs.sh  nixtools.nix  overlays.nix  remote_control.php.download  shell.nix  todo.org
.?submodules=1#furies/: flake.nix  home.nix
cfg/: fonts.nix  theme.nix
checks/: default.nix
common/: .gitmux.conf  config.toml
config/: +common.nix  +home.nix  +system.nix  automount.nix  colors.nix  common.nix  configuration.nix  console.nix  corePackages.nix  default.nix  file-associations.nix  fonts.nix  home-manager.nix  home.nix  nix.nix  nixos-rebuild.nix  qt.nix  sessionVariables.nix  shellAliases.nix  system.nix  theme.nix  themes.nix  user.nix  xremap.nix
configs/: +common.nix  +home.nix  +system.nix  default.nix  nix.nix
configs.bak/: +common.nix  default.nix  home-manager.nix
core/: +shellAliases.nix  _config.nix  _fonts.nix  _hm.nix  _sys.nix  bash.hm.nix  boot.nix  default.nix  fish.hm.nix  fonts.c.nix  fzf.hm.nix  home.hm.nix  keyd.sys.nix  misc.hm.nix  nix-utils.hm.nix  nix.c.nix  nix.nix  nixpkgs.c.nix  nixpkgs.nix  nushell.hm.nix  shell.nix  shell.sys.nix  starship.hm.nix  system.nix  systemShell.nix  systemd.nix  user.nix  user.sys.nix  xdg.hm.nix
desktop/: default.nix
dev/: _config.nix  _hm.nix  _sys.nix  default.nix  (+2 more)
templates/flakes_part/server/: pyproject.toml
(+2497 files in other folders)
