[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["F", "E", "W", "Q", "I001"]
exclude = ["migrations"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry]
name = "project"
version = "0.1.0"
description = "A project"
authors = ["Percy Timon"]
# readme = "README.md"
packages = [{ include = "stashee_django" }]

[tool.poetry.dependencies]
python = "^3.10.13"

[tool.poetry.group.dev.dependencies]
harlequin = { extras = ["postgres"], version = "^1.12.0" }
pytest = "^7.4.4"
pytest-django = "^4.7.0"
python-lsp-server = "^1.10.0"
python-lsp-ruff = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
